--- a/css/web.css
+++ b/css/web.css
@@ -57,7 +57,7 @@ a{
     border: none;
     background-color:white;
 }
-.navbar-default .navbar-toggle .icon-bar {
+.icon-bar {
     background-color:black;
     display: block;
     width: 45px;
@@ -73,7 +73,7 @@ a{
 .navbar-brand {
     height: 100%;
 }
-.navbar-brand>img {
+.logo {
     line-height: 50%;
     padding: 0;
     margin-top: 10px;
@@ -95,7 +95,7 @@ a{
 
 
 /* banner */
-#ban1 {
+#ban {
     background: url("../img/banner.jpg") center;
     height: 450px;
     background-size: cover;
@@ -105,33 +105,33 @@ a{
     border-bottom: 4px solid #e1e1e1;
 }
 
-#ban1 h1 {
+.h1 {
     margin-top: 65px;
     margin-bottom: 35px;
     font-size: 50px;
 }
 
-#ban1 .top {
+.top {
     border-top: 1px solid #fff;
     line-height: 40px;
     padding-top: 15px;
 }
 
-#ban1 .down {
+.down {
     border-bottom: 1px solid #fff;
     line-height: 40px;
     padding-bottom: 15px;
 }
 
-#ban1 span {
+#ban span {
     font-size: 20px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
-#ban1 span{
+#ban span{
     padding: 0;
 }
-.ban22 {
+.ban2 {
     display: none;
 }
 
@@ -186,11 +186,11 @@ a{
     margin: 0 auto;
     border-radius: 5px;
 }
-#cl .media-left img {
+#cl .Sbanner2 {
     margin-left: -15px;
 }
 
-#cl .media-body img {
+#cl .car {
     margin-top: 80px;
 }
 
@@ -218,18 +218,18 @@ a{
     color: #fff;
 }
 
-#cl .text-left {
+#cl .text-l {
     position: absolute;
     left: 700px;
     top: 630px;
     color: #fff;
 }
 
-#cl .text-left h3 {
+#cl .air1 {
     font-size: 36px;
 }
 
-#cl .text-left h5 {
+#cl .air2 {
     font-size: 18px;
     line-height: 30px;
     margin-top: 15px;
@@ -290,8 +290,8 @@ a{
 }
 
 #rmcard .left .card2 .card-img-overlay {
-    color: #fff;
-    background-color: #000;
+    color: white;
+    background-color:black;
     height: 90px;
 }
 
